# perso-xai

./: .gitignore  Makefile  README.md  TODOs.md  candidates_pair_ranker.py  check-script.sh  check_inf.py  encode.sh  encode_pareto_fronts.py  encode_pareto_fronts_autoxai.py  generate_dataset_metadata.py  generate_pareto_front.sh  generate_pareto_fronts.py  granular_submit.sh  hc_xai_long_job.sh  nb.ipynb  pyproject.toml  requirements.txt  run_local_autoxai_all.sh  run_local_jobs.sh  submit-jobs.sh
.github/workflows/: tests.yml
diagrams/: figure.drawio
docs/: Explainers-and-Metrics.md  docs.md
saved_models/experiment_results/: openml_bank_suite__decision_tree.json  openml_german_suite__decision_tree.json  openml_german_suite__gradient_boosting.json  openml_german_suite__mlp_classifier.json  openml_german_suite__random_forest.json
scripts/: run_explanations.sh  run_metrics.sh  run_metrics_task.sh  tune_openml_bank.sh  tune_openml_german.sh
scripts/remote/: hc_xai_long_array_job.sh  hc_xai_long_job.sh
src/baseline/: README.md  __init__.py  autoxai.py  autoxai_config.py  autoxai_data.py  autoxai_evaluation.py  autoxai_hpo.py  autoxai_objectives.py  autoxai_param_optimizer.py  autoxai_runner.py  autoxai_scoring.py  autoxai_types.py  autoxai_utils.py  run_autoxai_all.sh  run_autoxai_holdout_eval.sh  (+1 more)
src/cli/: main.py
tests/: test_autoxai_baseline_scoring.py  test_dataset_adapters.py  test_encode_pareto_fronts_autoxai.py  test_evaluation_tiebreak.py  test_persona.py  test_ranker.py  test_tabular_data_validator.py  test_tau_tuning.py  test_topk_aggregation.py
(+121 files in other folders)
